What's new in thtk 5:

Make: --enable-combine was removed.
thanm: The sentinel instructions are left out from the scripts.
thecl: Bogus rank flags will not be displayed for TH07.
thanm: The new format will be handled correctly (by ignoring the Format: field).

What's new in thtk 4:

thecl: Support for parsing of 16-bit values.
thecl: Support for TH07, TH08, and TH09 has been added.
thecl: The special syntax for encrypted strings was removed.
thdat: Support for TH13 has been added.
thmsg: Support for TH13 has been added.
thanm: Support for TH13 has been added.
thecl: Support for TH13 has been added.