@@ -54,8 +54,6 @@ Creates a new archive from a specification obtained by the
 .Ar l
 command.
 It will look for referenced image files in the current directory.
-.It Ar h
-Displays the usage.
 .It Ar V
 Displays the program version.
 .El
