@@ -44,8 +44,6 @@ The following commands are available:
 Compiles a level script.
 .It Ar d Ns Ar # Op Ar input Op Ar output
 Dumps a level script.
-.It Ar h
-Displays the usage along with the supported versions.
 .It Ar V
 Displays the program version.
 .El
@@ -53,7 +51,7 @@ Displays the program version.
 Replace the
 .Ar #
 option by the level script format version requested.
-Refer to the output of the h command for a list of supported formats.
+Running the program without a command will list the supported formats.
 .Sh EXIT STATUS
 The
 .Nm
