@@ -44,8 +44,6 @@ The following commands are available:
 Creates a new dialogue file from the input.
 .It Ar d Ns Oo Ar e Oc Ns Ar version Op Ar input Op Ar output
 Dumps a dialogue file.
-.It Ar h
-Displays the usage along with the supported versions.
 .It Ar V
 Displays the program version.
 .El
@@ -54,7 +52,7 @@ The version specifies which dialogue format to use,
 it is further modified by the presence of the
 .Ar e
 option.
-Refer to the output of the h command for a list of supported formats.
+Running the program without a command will list the supported formats.
 .Bl -tag -width Ds
 .It Ar e
 The
